<resources>
    <string name="app_name">My Application</string>
    <string name="total_time_logged">Total Time Logged: 120 hours</string>
    <string name="time_spent_on_categories">Time Spent on Categories: 20 hours</string>
    <string name="trends_over_time">Trends Over Time: ___</string>
    <string name="summary_view">Summary View</string>
    <string name="detailed_view">Detailed View</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_logging">Logging</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_timer">Timer</string>
</resources>